Added encapsulating ul tags to list items

--- a/demo-app/app/demo/demo-contribution/demo-contribution.html
+++ b/demo-app/app/demo/demo-contribution/demo-contribution.html
@@ -1,14 +1,20 @@
 <h2><u><b>Adding to the Doc Site</b></u></h2>
 
-<p><li>If you would like to use the automated documentation to add to the doc site, run the following from the terminal: <ul><li>npm install 
-    --registry=http://artifactory.mia.ulti.io/artifactory/api/npm/npm generator-ign</li></ul> </li>
-    <li>After installing the package, run the following from the terminal: <ul><li>yo ign</li></ul></li>
+<ul>
+    <li>If you would like to use the automated documentation generator to add to the doc site, run the following from the terminal: 
+        <ul><li>npm install 
+            --registry=http://artifactory.mia.ulti.io/artifactory/api/npm/npm generator-ign
+        </li></ul>
+    </li>
+    <li>After installing the package, run the following from the terminal: 
+        <ul><li>yo ign</li></ul>
+    </li>
     <li>This package allows for semi-automatic generation of component documentation. Just check the output and push to the repository!</li>
     <li>You can use this feature for out of the box angular material components and subcomponents or custom components and subcomponents.</li>
-    </p>
-<b><p>OR</p></b>
-<p><li>Below are the requirements to add to the doc site, if you choose to do so manually. Please read these instructions
-    thoroughly and mind our restrictions!</li></p>
+</ul>
+<ign-center><u><p>OR</p></u></ign-center>
+<ul><li>Below are the requirements to add to the doc site, if you choose to do so manually. Please read these instructions
+    thoroughly and mind our restrictions!</li></ul>
 
 <h3>How to Add Your Own Component:</h3>
 
@@ -16,20 +22,32 @@
 
 <h3>HTML Requirements:</h3>
 <ul>
-    <li>A Use description.<ul><li>This informs the consumer how to use the component and should provide any contextual links.</li></ul></li>
+    <li>A Use description.
+        <ul><li>This informs the consumer how to use the component and should provide any contextual links.</li></ul>
+    </li>
     <li>A Sample.<ul><li>The doc site samples are embedded within a tabs module,
         <a url="https://material.angular.io/components/tabs/overview">which can be found here.</a> Samples should include an
-        implementation, the HTML for the component, and the typescript if necessary.</li></ul></li>
-    <li>A ReadMe.<ul><li>This will provide the content and style descriptions.</li></ul></li>
+        implementation, the HTML for the component, and the typescript if necessary.</li></ul>
+    </li>
+    <li>A ReadMe.
+        <ul><li>This will provide the content and style descriptions.</li></ul>
+    </li>
 </ul>
 <h3>ReadMe Requirements:</h3>
 <ul>
     <li>Follow the Markdown component styling.</li>
-    <li>A Content Description<ul><li>This provides the consumer with information on what to include within the component.
-    </li></ul></li>
-    <li>A Style Description<ul><li>This provides the consumer with information on how to style the component. If the
-        component is a container or does not have stylistic aspects, this should be stated outright.</li></ul></li>
+    <li>A Content Description
+        <ul><li>
+            This provides the consumer with information on what to include within the component.
+        </li></ul>
+    </li>
+    <li>A Style Description
+        <ul><li>This provides the consumer with information on how to style the component. If the
+            component is a container or does not have stylistic aspects, this should be stated outright.
+        </li></ul>
+    </li>
     <li>You may add other information about your component here! Some components require or are enhanced with API
-        information, for example. It's your component! Do your best to make it as consumable as possible!</li>
+        information, for example. It's your component! Do your best to make it as consumable as possible!
+    </li>
 </ul>
 
