added further instruction, removed u tag

--- a/demo-app/app/demo/demo-contribution/demo-contribution.html
+++ b/demo-app/app/demo/demo-contribution/demo-contribution.html
@@ -9,10 +9,11 @@
     <li>After installing the package, run the following from the terminal: 
         <ul><li>yo ign</li></ul>
     </li>
+    <li>Be sure to separate all words within the name of your component with hyphens, i.e. "demo-app-example", when prompted.</li>
     <li>This package allows for semi-automatic generation of component documentation. Just check the output and push to the repository!</li>
     <li>You can use this feature for out of the box angular material components and subcomponents or custom components and subcomponents.</li>
 </ul>
-<ign-center><u><p>OR</p></u></ign-center>
+<ign-center><p>OR</p></ign-center>
 <ul><li>Below are the requirements to add to the doc site, if you choose to do so manually. Please read these instructions
     thoroughly and mind our restrictions!</li></ul>
 
