--- a/demo-app/app/demo/demo-contribution/demo-contribution.html
+++ b/demo-app/app/demo/demo-contribution/demo-contribution.html
@@ -1,12 +1,12 @@
 <h2><u><b>Adding to the Doc Site</b></u></h2>
 
 <ul>
-    <li>If you would like to use the automated documentation generator to add to the doc site, run the following from the terminal: 
+    <li>If you would like to use the automated documentation generator to add to the doc site, run the following from the terminal to install the generator: 
         <ul><li>npm install 
             --registry=http://artifactory.mia.ulti.io/artifactory/api/npm/npm generator-ign
         </li></ul>
     </li>
-    <li>After installing the package, run the following from the terminal: 
+    <li>After installing the generator package, run the following from the terminal to install yeoman: 
         <ul><li>npm install -g yo</li></ul>
     </li>
     <li>After installing yeoman, run the following from the terminal in the directory where the generator is installed: 
