changed doc-site to playground as per doc site sync

--- a/demo-app/app/demo/demo-contribution/demo-contribution.html
+++ b/demo-app/app/demo/demo-contribution/demo-contribution.html
@@ -1,7 +1,7 @@
-<h2><u><b>Adding to the Doc Site</b></u></h2>
+<h2><u><b>Adding to the Playground</b></u></h2>
 
 <ul>
-    <li>If you would like to use the automated documentation generator to add to the doc site, run the following from the terminal to install the generator: 
+    <li>If you would like to use the automated documentation generator to add to the playground, run the following from the terminal to install the generator: 
         <ul><li>npm install 
             --registry=http://artifactory.mia.ulti.io/artifactory/api/npm/npm generator-ign
         </li></ul>
@@ -17,7 +17,7 @@
     <li>You can use this feature for out of the box angular material components and subcomponents or custom components and subcomponents.</li>
 </ul>
 <ign-center><p>OR</p></ign-center>
-<ul><li>Below are the requirements to add to the doc site, if you choose to do so manually. Please read these instructions
+<ul><li>Below are the requirements to add to the playground, if you choose to do so manually. Please read these instructions
     thoroughly and mind our restrictions!</li></ul>
 
 <h3>How to Add Your Own Component:</h3>
@@ -29,7 +29,7 @@
     <li>A Use description.
         <ul><li>This informs the consumer how to use the component and should provide any contextual links.</li></ul>
     </li>
-    <li>A Sample.<ul><li>The doc site samples are embedded within a tabs module,
+    <li>A Sample.<ul><li>The playground samples are embedded within a tabs module,
         <a url="https://material.angular.io/components/tabs/overview">which can be found here.</a> Samples should include an
         implementation, the HTML for the component, and the typescript if necessary.</li></ul>
     </li>
