--- a/demo-app/app/welcome/welcome.html
+++ b/demo-app/app/welcome/welcome.html
@@ -1,4 +1,4 @@
-<ign-center><h2>Hello! You've stumbled upon the NU team's doc site. </h2>
+<ign-center><h2>Hello! You've stumbled upon the NU team's ignite design system playground. </h2>
     <p>This is where we store our components that can be universally utilized within the web app. This helps to improve consistency,
     writability, and readability in code across the board!</p>
     <p>Click on the hamburger menu icon to begin navigating to our components. You can consume these components and use
