moved gql folder and models to root and moved graphql setup to app.module

--- a/demo-app/app/welcome/welcome.html
+++ b/demo-app/app/welcome/welcome.html
@@ -1,5 +1,29 @@
-<ign-center><h2>Hello! You've stumbled upon the NU team's ignite design system playground. </h2>
-    <p>This is where we store our components that can be universally utilized within the web app. This helps to improve consistency,
-    writability, and readability in code across the board!</p>
-    <p>Click on the hamburger menu icon to begin navigating to our components. You can consume these components and use
-    them in your own development!</p></ign-center>
+<header>
+    <ign-center><h2>Hello! You've stumbled upon the NU team's ignite design system playground. </h2>
+        <p>This is where we store our components that can be universally utilized within the web app. This helps to improve consistency,
+        writability, and readability in code across the board!</p>
+        <p>Click on the hamburger menu icon to begin navigating to our components. You can consume these components and use
+        them in your own development!</p></ign-center>
+</header>
+<main>
+    <section aria-label="build" class="build">
+        <ign-center><h1>Build Status</h1></ign-center>
+        <ign-card-container>
+            
+        </ign-card-container>
+    </section>
+    <section aria-label="coverage" class="coverage">
+        <ign-center><h1>Coverage</h1></ign-center>
+        <ign-card-container>
+
+        </ign-card-container>
+    </section>
+    
+    <section aria-label="component" class="component">
+        <ign-center><h1>Component Statuses</h1></ign-center>
+        <ign-card-container>
+
+        </ign-card-container>
+    </section>
+</main>
+
