modified link so that's it's clickable

--- a/demo-app/app/demo/demo-contribution/demo-contribution.html
+++ b/demo-app/app/demo/demo-contribution/demo-contribution.html
@@ -29,8 +29,8 @@
     <li>A Use description.
         <ul><li>This informs the consumer how to use the component and should provide any contextual links.</li></ul>
     </li>
-    <li>A Sample.<ul><li>The playground samples are embedded within a tabs module,
-        <a url="https://material.angular.io/components/tabs/overview">which can be found here.</a> Samples should include an
+    <li>A Sample.<ul><li>The playground samples are embedded within a tabs module, which can be found
+        <a href="https://material.angular.io/components/tabs/overview">here.</a> Samples should include an
         implementation, the HTML for the component, and the typescript if necessary.</li></ul>
     </li>
     <li>A ReadMe.
