--- a/demo-app/app/welcome/welcome.html
+++ b/demo-app/app/welcome/welcome.html
@@ -46,11 +46,15 @@
         </div>
     </section>
     
-    <section aria-label="component" class="component">
+    <section aria-label="component-header" class="component-h">
         <ign-center><h1>Component Statuses</h1></ign-center>
-        <ign-card-container>
-
-        </ign-card-container>
+    </section>
+    
+    <section aria-label="component-body" class="component-b">
+        <div class="stat-card" *ngFor="let build of buildData.testResults">
+            <div class="component-card-title">{{ build.assertionResults[0].ancestorTitles[0] }}</div>
+            <div [ngStyle]="{'background-color': componentStatusColor(build)}" class="component-card-status"></div>
+        </div>
     </section>
 </main>
 
