finished views, need to clean up responsiveness

--- a/demo-app/app/welcome/welcome.html
+++ b/demo-app/app/welcome/welcome.html
@@ -9,39 +9,47 @@
     <section aria-label="build" class="build">
         <ign-center class="build-header"><h1>Build Status</h1></ign-center>
         <a class="stat-card build-master" [attr.href]="masterBranchData?.concourseUrl" target="_blank">
-            <div class="build-card-branch">Master</div>
-            <div class="build-card-status">{{ masterBranchData?.status.charAt(0) + masterBranchData?.status.toLowerCase().slice(1) }}</div>
+            <div class="build-card-branch">
+                <p>Master</p>
+            </div>
+            <div class="build-card-status" [ngStyle]="{ 'background-color': buildBackgroundColor(masterBranchData) }">
+                <p>{{ masterBranchData?.status.charAt(0) + masterBranchData?.status.toLowerCase().slice(1) }}</p>
+            </div>
         </a>
 
         <a class="stat-card build-develop" [attr.href]="developBranchData?.concourseUrl" target="_blank">
-            <div class="build-card-branch">Develop</div>
-            <div class="build-card-status">{{ masterBranchData?.status.charAt(0) + developBranchData?.status.toLowerCase().slice(1) }}</div>
+            <div class="build-card-branch">
+                <p>Develop</p>
+            </div>
+            <div class="build-card-status" [ngStyle]="{ 'background-color': buildBackgroundColor(developBranchData) }">
+                <p>{{ masterBranchData?.status.charAt(0) + developBranchData?.status.toLowerCase().slice(1) }}</p>
+            </div>
         </a>
     </section>
     <section aria-label="coverage" class="coverage">
         <ign-center class="coverage-header"><h1>Coverage</h1></ign-center>
         <div class="stat-card coverage-functions">
-            <div class="coverage-card-title">Functions</div>
+            <div class="coverage-card-title"><p>Functions</p></div>
             <div [ngStyle]="{'background-color': coverageBackgroundColor(coverageData?.functions)}" class="coverage-card-detail">
-                {{ coverageData.functions?.pct + '%' }}
+                <p>{{ coverageData.functions?.pct + '%' }}</p>
             </div>
         </div>
         <div class="stat-card coverage-lines">
-            <div class="coverage-card-title">Lines</div>
+            <div class="coverage-card-title"><p>Lines</p></div>
             <div [ngStyle]="{'background-color': coverageBackgroundColor(coverageData?.lines)}" class="coverage-card-detail">
                 {{ coverageData.lines?.pct + '%' }}
             </div>
         </div>
         <div class="stat-card coverage-branches">
-            <div class="coverage-card-title">Branches</div>
+            <div class="coverage-card-title"><p>Branches</p></div>
             <div [ngStyle]="{'background-color': coverageBackgroundColor(coverageData?.branches)}" class="coverage-card-detail">
-                {{ coverageData.branches?.pct + '%' }}
+                <p>{{ coverageData.branches?.pct + '%' }}</p>
             </div>
         </div>
         <div class="stat-card coverage-statements">
-            <div class="coverage-card-title">Statements</div>
+            <div class="coverage-card-title"><p>Statements</p></div>
             <div [ngStyle]="{'background-color': coverageBackgroundColor(coverageData?.statements)}" class="coverage-card-detail">
-                {{ coverageData.statements?.pct + '%' }}
+                <p>{{ coverageData.statements?.pct + '%' }}</p>
             </div>
         </div>
     </section>
@@ -52,7 +60,7 @@
     
     <section aria-label="component-body" class="component-b">
         <div class="stat-card-component" *ngFor="let build of componentList">
-            <div class="component-card-title">{{ build.assertionResults[0].ancestorTitles[0] }}</div>
+            <div class="component-card-title"><p>{{ build.assertionResults[0].ancestorTitles[0] }}</p></div>
             <div [ngStyle]="{'background-color': componentStatusColor(build)}" class="component-card-status"></div>
         </div>
     </section>
