--- a/demo-app/app/welcome/welcome.html
+++ b/demo-app/app/welcome/welcome.html
@@ -23,11 +23,11 @@
         <stat-card class="coverage-statements" title="Statements" titleWidth="70%" titleBackground="WhiteSmoke" [detail]="coverageData.statements?.pct + '%'" detailWidth="30%" [detailBackground]="coverageBackgroundColor(coverageData?.statements)"></stat-card>
     </section>
     
-    <section aria-label="component-header" class="component-h">
+    <!--<section aria-label="component-header" class="component-h">
         <ign-center><h1>Component Statuses</h1></ign-center>
     </section>
     
     <section aria-label="component-body" class="component-b">
         <stat-card *ngFor="let build of componentList" height="60px" width="300px" [title]="build.assertionResults[0].ancestorTitles[0]" titleWidth="75%" titleBackground="WhiteSmoke" detailWidth="25%" [detailBackground]="componentStatusColor(build)"></stat-card>
-    </section>
+    </section> -->
 </main>
