--- a/src/expandable-fab/expandable-fab.html
+++ b/src/expandable-fab/expandable-fab.html
@@ -1,13 +1,13 @@
-<div [ngClass]="{'active': isOpen}" class="buttons-container">
-  <ng-content *ngIf="isOpen"></ng-content>
-  <div class="main-button-container" da="mainButton">
-    <a mat-fab class="icon-container" ignA11yClick (click)="handleClick()">
-      <mat-icon style="position:absolute"  class="icon icon-secondary" [ngClass]="{'icon-secondary-active': isOpen}">
-        clear
-      </mat-icon>
-      <mat-icon class="icon icon-primary" [ngClass]="{'icon-primary-active': isOpen}">
-        add
-      </mat-icon>
-    </a>
-  </div>
+<div [ngClass]="{'active': isOpen}" class="buttons-container" role="menu">
+    <ng-content *ngIf="isOpen"></ng-content>
+    <div class="main-button-container" da="mainButton">
+      <a mat-fab class="icon-container" tabindex="0" ignA11yClick (click)="handleClick()"  attr.aria-label={{ariaLabelValue}} aria-haspopup="true" role="button" attr.aria-expanded="{{isOpen}}">
+        <mat-icon style="position:absolute"  class="icon icon-secondary" [ngClass]="{'icon-secondary-active': isOpen}">
+          clear
+        </mat-icon>
+        <mat-icon class="icon icon-primary" [ngClass]="{'icon-primary-active': isOpen}">
+          add
+        </mat-icon>
+      </a>
+    </div>
 </div>
