--- a/demo-app/app/demo/demo-checkbox/demo-checkbox.html
+++ b/demo-app/app/demo/demo-checkbox/demo-checkbox.html
@@ -10,11 +10,21 @@
 <h2>Sample</h2>
 <mat-tab-group>
     <mat-tab label="Component Sample">
-        <div class="tab-height"> <mat-checkbox>Check me!</mat-checkbox> </div>
+        <br/>
+       <p id="example">CheckBox List</p>
+        <div class="tab-height"> 
+            <div id="checkboxList" aria-label="Checkbox List">
+                <mat-checkbox aria-describedby="checkboxList">Check me!</mat-checkbox> 
+                <mat-checkbox aria-describedby="checkboxList">Check me too!</mat-checkbox> 
+            </div>    
+        </div>
     </mat-tab>
     <mat-tab label="HTML"><div class="tab-height">
         <table style="width:100%">
-            &lt;mat-checkbox&gt;Check me!&lt;/mat-checkbox&gt;
+            &lt;div id="checkboxList" aria-label ="Checkbox List"&gt; <br/>
+                &nbsp; &lt;mat-checkbox aria-describedby="checkboxList"&gt;Check me!&lt;/mat-checkbox&gt; <br/>
+                &nbsp; &lt;mat-checkbox aria-describedby="checkboxList"&gt;Check me too!&lt;/mat-checkbox&gt; <br/>
+            &lt;/div&gt;
         </table>
     </div></mat-tab>
 </mat-tab-group>
