Added error banner accessibility

--- a/demo-app/app/demo/demo-error-banner/demo-error-banner.html
+++ b/demo-app/app/demo/demo-error-banner/demo-error-banner.html
@@ -7,7 +7,7 @@
 <mat-tab-group>
     <mat-tab label="Component Sample">
         <div class="tab-height">
-            <ign-error-banner> <button class="dismiss-button" type="button" mat-icon-button>&times;</button>
+            <ign-error-banner> <button class="dismiss-button" type="button" aria-label="exit" mat-icon-button>&times;</button>
                 <ul class="message-list">
                     <li>This is an error message.</li>
                     <li>You can add icons like the red x above to clear the message.</li>
@@ -16,7 +16,7 @@
         </div></mat-tab>
     <mat-tab label="HTML"><div class="tab-height">
         <table style="width:100%">
-            <p> &lt;ign-error-banner&gt; &lt;button class="dismiss-button" type="button" mat-icon-button"&gt;&times;&lt;/button&gt;</p>
+            <p> &lt;ign-error-banner&gt; &lt;button class="dismiss-button" type="button" aria-label="exit" mat-icon-button"&gt;&times;&lt;/button&gt;</p>
             <p>&nbsp;&nbsp;&lt;ul class="message-list"&gt;</p>
             <p>&nbsp;&nbsp; &nbsp;&nbsp; &lt;li&gt;This is an error message.&lt;/li&gt;</p>
             <p>&nbsp;&nbsp; &nbsp;&nbsp; &lt;li>You can add icons like the red x above to clear the message.&lt;/li&gt;</p>
