--- a/demo-app/app/demo/demo-expandable-fab/demo-expandable-fab.html
+++ b/demo-app/app/demo/demo-expandable-fab/demo-expandable-fab.html
@@ -12,7 +12,7 @@
 <h2>Sample</h2>
 <mat-tab-group>
     <mat-tab label="Component Sample"><div class="tab-height">
-        <div id ="element"><ign-expandable-fab>
+        <div id ="element" ><ign-expandable-fab ariaLabelOpen="open example menu" ariaLabelClose="close example menu">
             <ign-expandable-fab-item icon="add">
             </ign-expandable-fab-item >
             <ign-expandable-fab-item icon="file_upload">
@@ -23,7 +23,7 @@
     </div></mat-tab>
     <mat-tab label="HTML"><div class="tab-height">
         <table style="width:100%">
-            <p>&lt;ign-expandable-fab&gt;</p>
+            <p>&lt;ign-expandable-fab ariaLabelOpen="open example menu" ariaLabelClose="close example menu"&gt;</p>
             <p>   &nbsp;&nbsp;&lt;ign-expandable-fab-item icon="add"&gt;</p>
             <p>   &nbsp;&nbsp;&lt;/ign-expandable-fab-item&gt;</p>
             <p>   &nbsp;&nbsp;&lt;ign-expandable-fab-item icon="file_upload"&gt;</p>
