--- a/demo-app/app/demo/demo-loading-container/demo-loading-container.html
+++ b/demo-app/app/demo/demo-loading-container/demo-loading-container.html
@@ -11,7 +11,7 @@
     <mat-tab label="Component Sample">
         <div class="tab-height">
             <div>
-                <ign-loading-container [loading]="!loaded">
+                <ign-loading-container [loading]="!loaded" ariaLabel="Loading Example">
                     <!-- Empty State View -->
                     <ign-empty-state>
                         <ign-empty-state-title>This is a Title</ign-empty-state-title>
@@ -47,7 +47,7 @@
     <mat-tab label="HTML"><div class="tab-height">
         <table style="width:100%">
             <p> &lt;div&gt;</p>
-            <p>&nbsp; &lt;ign-loading-container [loading]="!loaded"&gt;</p>
+            <p>&nbsp; &lt;ign-loading-container [loading]="!loaded" ariaLabel="Loading Example"&gt;</p>
             <p> &nbsp;&nbsp;  &lt;!-- Empty State View --&gt;</p>
             <p> &nbsp;&nbsp;  &lt;ign-empty-state&gt;</p>
             <p> &nbsp;&nbsp;&nbsp;&nbsp;&lt;ign-empty-state-title&gt;This is a Title&lt;/ign-empty-state-title&gt;</p>
