--- a/src/loading-container/loading-container.html
+++ b/src/loading-container/loading-container.html
@@ -1,8 +1,8 @@
 <div *ngIf="!loading">
-  <ng-content></ng-content>
-</div>
-<div *ngIf="loading">
-  <div *ngIf="pastDelay" class="spinner-container">
-    <mat-spinner></mat-spinner>
+    <ng-content></ng-content>
   </div>
+  <div *ngIf="loading" attr.aria-label="{{spinnerArialLabel}}" role="alert">
+    <div *ngIf="pastDelay" class="spinner-container">
+      <mat-spinner></mat-spinner>
+    </div>
 </div>
